20-sg-rules/main.tf
# bastion
resource "aws_security_group_rule" "bastion_internet" {
  type        = "ingress"
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  # target traffic
  security_group_id = local.bastion_sg_id
}

# mongodb
resource "aws_security_group_rule" "bastion_mongodb" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.bastion_sg_id
  # target traffic
  security_group_id = local.mongodb_sg_id
}

resource "aws_security_group_rule" "mongodb_catalogue" {
  type      = "ingress"
  from_port = 27017
  to_port   = 27017
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.catalogue_sg_id
  # target traffic
  security_group_id = local.mongodb_sg_id
}

resource "aws_security_group_rule" "mongodb_user" {
  type      = "ingress"
  from_port = 27017
  to_port   = 27017
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.user_sg_id
  # target traffic
  security_group_id = local.mongodb_sg_id
}

#redis
resource "aws_security_group_rule" "bastion_redis" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.bastion_sg_id
  # target traffic
  security_group_id = local.redis_sg_id
}

resource "aws_security_group_rule" "redis_user" {
  type      = "ingress"
  from_port = 6379
  to_port   = 6379
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.user_sg_id
  # target traffic
  security_group_id = local.redis_sg_id
}

resource "aws_security_group_rule" "redis_cart" {
  type      = "ingress"
  from_port = 6379
  to_port   = 6379
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.cart_sg_id
  # target traffic
  security_group_id = local.redis_sg_id
}

# mysql
resource "aws_security_group_rule" "bastion_mysql" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.bastion_sg_id
  # target traffic
  security_group_id = local.mysql_sg_id
}

# backend-alb
resource "aws_security_group_rule" "bastion_backend_alb" {
  type      = "ingress"
  from_port = 80
  to_port   = 80
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.bastion_sg_id
  # target traffic
  security_group_id = local.backend_alb_sg_id
}

# basion_backend-alb
resource "aws_security_group_rule" "bastion_catalogue" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.bastion_sg_id
  # target traffic
  security_group_id = local.catalogue_sg_id
}

# catalogue_backend-alb
resource "aws_security_group_rule" "catalogue_backend_alb" {
  type      = "ingress"
  from_port = 8080
  to_port   = 8080
  protocol  = "tcp"
  # where traffic come from(source)
  source_security_group_id = local.backend_alb_sg_id
  # target traffic
  security_group_id = local.catalogue_sg_id
}
